--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,41 +3,18 @@
 
 
 
-<div class="container">
+
     <% if(user) { %>
-        <div class="times">
-            <a href="/myscedule" class="btn btn-success">My Scedule</a>
-        </div>
+        
         <div class="row">
-            <div class="col-xs-4">
-                <div id="friendlist">
-                    <h3>My friendList</h3>
-                    <h4>Add friend by username.</h4>
-                    <form class="form-group" action="/search?_method=PUT" method="POST">
-                        <input type="text" name="nfriend[friendname]" class="form-control input-md" placeholder="Username">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default">Add</button>
-                        </span>
-                    </form>
-                    <ul>
-                    <% list.friends.forEach(function(friend){ %>
-                        <li class="left">
-                            <i class="fa fa-times deletelist" aria-hidden="true"></i>
-                            <p class="hidden friend"><%= friend._id %></p>
-                            <p class="friendname"><%= friend.username %></p>
-                        </li>
-                    <% }) %>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-xs-8">
+            <div class="col-md-12">
                 <h3>My Groups</h3>
                 <h4>Group name:</h4>
                 <form action="#" class="form-group">
                     <input type="text" name="groupname" id="groupname" class="form-control input-md" placeholder="Group name" required>
                     <button id="addgroup" class="btn btn-default">Create Group</button>
                 </form>
-                <div id="groups">
+                <div id="groups" class="row" style="display:flex; flex-wrap: wrap;">
                 
                 </div>
             </div>
@@ -46,7 +23,7 @@
             <% if(list.groups.length > 0) { %>
                 <h3>You are included in the following groups:</h3>
                 <% list.groups.forEach(function(group){ %>
-                    <a class="btn btn-success" href="/<%= group.groupid._id %>"><h3 class="firstone"><%= group.groupid.name %> </h3><h4>made by </h4><h3><%= group.authid.username %></h3></a>
+                    <a class="btn btn-default" href="/<%= group.groupid._id %>"><h3 class="firstone"><%= group.groupid.name %> </h3><h4>made by </h4><h3><%= group.authid.username %></h3></a>
                 <% }) %>
             <% } %>
         </div>
@@ -54,7 +31,7 @@
     <h2> Please register or login</h2>
     <% } %>
     <script type="text/javascript" src="/javascript.js"></script>
-</div>
+
 
 
 <% include partials/footer %>
