--- a/views/scedule.ejs
+++ b/views/scedule.ejs
@@ -4,6 +4,20 @@
 <div class="container">
 
     <h1 id="titlesc">Welcome to your scedule page, <%= user.username %></h1>
+    <br>
+    
+    <h4>
+        Here you add your free time to your Timed-Up account.<br>
+        You can add ranges of minutes, hours, days, months even years! There's no limit.<br>
+        Keep in mind that this time will be used to calculate shared time periods with group <br>
+        members which means that if it's not accurate it will lead to false results.<br>
+        <br>
+        After you do this,
+        you should add some friends and start creating groups <br>
+        in order to organize and view your common free time with them!
+    </h4>
+    <br>
+    <hr>
 
     <div class="row">
         <div class="col-xs-6">
@@ -22,7 +36,6 @@
     </div>
     <button class="btn btn-success formbut" id="submit">Submit Range</button>
     <br>
-    <a class="btn btn-warning formbut" href="/">Go back</a>
     <div id="arrays">
     </div>
 
