--- a/views/group.ejs
+++ b/views/group.ejs
@@ -3,15 +3,23 @@
 <% include partials/header %>
 
 
-<div class="container">
-    <h2>Welcome to group <%= group.name %></h2>
-    <h2>Group Members:</h2>
+
+<h2>Welcome to group <%= group.name %></h2><br>
+<h3>
+Here you can see the combined common time of all the group members<br>
+    as well as all the combinations of members with common time.
+</3>
+<h2>Group Members:</h2>
+<div id="members" class="row">
     <% group.groupies.forEach(function(groupie){ %>
-        <h3><%= groupie.username %></h3>
+        <div class="col-xs-1 member"><h3><%= groupie.username %></h3></div>
     <% }) %>
-    <div class="besttimes">
-    </div>
 </div>
+<br>
+<hr>
+<div class="besttimes">
+</div>
+
 
 <script type="text/javascript" src="/timecalc.js"></script>
 <% include partials/footer %>
