made layout changes and ui improvements

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
                 <h3>My Groups</h3>
                 <h4>Group name:</h4>
                 <form action="#" class="form-group">
-                    <input type="text" name="groupname" id="groupname" class="form-control input-md" placeholder="Group name" required>
+                    <input type="text" name="groupname" id="groupname" class="form-control input-md" placeholder="Group name" maxlength="14" required>
                     <button id="addgroup" class="btn btn-default">Create Group</button>
                 </form>
                 <div id="groups" class="row" style="display:flex; flex-wrap: wrap;">
