--- a/views/scedule.ejs
+++ b/views/scedule.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-    <h1 id="titlesc">Welcome to your scedule page, <%= user.username %></h1>
+    <h1 id="titlesc">Welcome to your scheduling page, <%= user.username %></h1>
     <br>
     
     <h4>
