--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,6 +22,7 @@ body {
     background-color:rgba(20, 20, 20, 0.2);
     color: rgba(20, 20, 20, 0.9);
     border-radius: 5px;
+    min-width:100px;
     margin: 5px;
 }
 
@@ -33,7 +34,8 @@ hr {
     max-height: 300px;
     overflow-y: scroll;
     border: 1px solid rgba(20, 20, 20, 1);;
-    border-radius: 20px;
+    border-radius: 0.5em;
+    padding: 20px;
 }
 
 @media(min-width: 992px) {
