--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,7 @@
                             <li><h3> Signed in as: <strong><%= currentUser.username %></strong></h3></li>
                             <br>
                             <li class="times">
-                                <a href="/myscedule" class="btn btn-default btn-lg">My Scedule</a>
+                                <a href="/myscedule" class="btn btn-default btn-lg">My Schedule</a>
                             </li>
                             <li class="myowngroups">
                                 <a href="/" class="btn btn-default btn-lg">My Groups</a>
