--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
     <h1>Sign Up</h1>
 
     <form action="/register" method="post">
-        <input type="text" name="username" placeholder="username">
+        <input type="text" name="username" placeholder="username" maxlength="14">
         <input type="password" name="password" paceholder="password">
         <button>Submit</button>
     </form>
