--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
     <body>
     <div  class="container-fluid"> 
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-4">
                 <nav class = "navbar navbar-default" role="navigation">
                     <div class = "navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-exi-collapse">
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                        <a class = "navbar-brand" href = "/">Timed-UP</a>
+                        <a class = "navbar-brand" href = "/"><p class='thetitle'>Timed-UP</p></a>
                     </div>
                     <div class="navbar collapse navbar-collapse navbar-exi-collapse">
                         <ul class = "nav navbar-nav">
@@ -63,8 +63,6 @@
                                 <div class="col-xs-9 text-left">
                                     <p class="friendname"><%= friend.username %></p>
                                 </div>
-                                
-                                
                             </li>
                             <% }) %>
                             </div>
@@ -77,7 +75,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-md-9">
+            <div class="col-sm-8">
                 <% if(error && error.length > 0) { %>
                     <div class="container">
                         <div class="alert alert-danger" role="alert">
