--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <h1> login </h1>
     <form action="/login" method="post">
-        <input type = "text" name="username" placeholder="username">
+        <input type = "text" name="username" placeholder="username" maxlength="11">
         <input type = "password" name="password" placeholder="password">
         <input type = "submit" value="login">
     </form>
