--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Time Coordinator</title>
+        <title>Timed-Up</title>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
     <body>
     <div  class="container-fluid"> 
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <nav class = "navbar navbar-default" role="navigation">
                     <div class = "navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-exi-collapse">
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                        <a class = "navbar-brand" href = "/"><p class='thetitle'>Timed-UP</p></a>
+                    <p class='thetitle'><a class = "navbar-brand" href = "/">Timed-UP</a></p>
                     </div>
                     <div class="navbar collapse navbar-collapse navbar-exi-collapse">
                         <ul class = "nav navbar-nav">
@@ -48,7 +48,7 @@
                             <br>
                             <h3 class="text-center">My Friendlist</h3>
                             <form  action="/search?_method=PUT" method="POST" class="navbar-form navbar-left" role="search">
-                                <input type="text" name="nfriend[friendname]" class="form-control input-md" placeholder="Username">
+                                <input type="text" name="nfriend[friendname]" class="form-control input-md" placeholder="Username" maxlength="11">
                                 <span class="input-group-btn">
                                     <button class="btn btn-default">Add Friend</button>
                                 </span>
@@ -75,7 +75,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-sm-8">
+            <div class="col-md-8">
                 <% if(error && error.length > 0) { %>
                     <div class="container">
                         <div class="alert alert-danger" role="alert">
