Split up navigation component from header style login/logout elements

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <% include ./partials/header %>
 
 
-<div class="container">
+<div class="">
     <h1> login </h1>
     <form action="/login" method="post">
         <input type = "text" name="username" placeholder="username" maxlength="11">
