--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,26 @@
+/*
+ * BASE
+ */
 html,
 body {
   font-family: 'avenir next', avenir, sans-serif;
+}
+
+/*
+ * RESET STYLES
+ */
+.input-reset {
+
+}
+
+.input-reset:focus,
+.btn-reset:focus {
+  outline:0
+}
+
+.btn-reset {
+  border: none;
+  background: none;
 }
 
 /*
@@ -8,16 +28,4 @@ body {
  */
 .btn-gradient {
   background: linear-gradient(to right, rgba(246,46,36,1) 0%, rgba(255,54,121,1) 100%);
-}
-
-.input-reset {
-
-}
-.input-reset:focus {
-  outline:0
-}
-
-.btn-reset {
-  border: none;
-  background: none;
 }
