--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -41,25 +41,22 @@
           <div class="w-90 center">
             <p class="f5 mv2 pa0">My Friendlist:<p>
             <!-- List friends -->
-            <ul>
-            <% list.friends.forEach(function(friend){ %>
-            <li class="">
-                <div class="col-xs-3">
-                    <p class=""><%= friend._id %></p>
-                    <i class="fa fa-times deletelist" aria-hidden="true"></i>
+            <ul class="list center tc ma0 mt2 mb4">
+              <% list.friends.forEach(function(friend){ %>
+              <li class="ba mv2">
+                <p class="f5 tl mv1 w-70 near-black dib"><%= friend.username %></p>
+                <div class="dib grow-large hover-red black-70 pointer">
+                  <i class="fa fa-times deletelist f3 v-btm" aria-hidden="true"></i>
                 </div>
-                <div class="">
-                    <p class=""><%= friend.username %></p>
-                </div>
-            </li>
-            <% }) %>
-          </ul>
+              </li>
+              <% }) %>
+            </ul>
           <!-- Add a new friend -->
           <form action="/search?_method=PUT" method="POST" class="mv2" role="search">
             <div class="measure">
-              <label for="name" class="f6 b db mb2">Add Friend <span class="normal black-60">(by username)</span></label>
+              <label for="name" class="f5 b db mb2">Add Friend <span class="normal black-60">(by username)</span></label>
               <input name="nfriend[friendname]" class="input-reset ba b--black-20 pa2 mb2 dib w-70" type="text" aria-describedby="name-desc" maxlength="11">
-              <button type="submit" class="tr v-btm btn-reset f2 black-70 pointer dim w-20 dib">
+              <button type="submit" class="tr v-mid btn-reset f2 black-70 pointer dim w-20 dib">
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </button>
             </div>
