--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
     <div class="pa4">
         <div class="">
             <% include navigation %>
-            <div class="">
+            <div class="fl w-80-ns w-100 mw7">
                 <% if(error && error.length > 0) { %>
                     <div class="">
                         <div class="" role="alert">
