--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,4 +1,4 @@
-<div class="fl w-20 mw5 mr4">
+<div class="fl w-20-ns w-100 mw6 mr4">
     <nav class="" role="navigation">
         <div class="pa2 shadow-4 bg-white">
           <!--<i class="active fa fa-eye f2 black-70 pointer dim" aria-hidden="true"></i>-->
