--- a/views/scedule.ejs
+++ b/views/scedule.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 
-
+<link rel="stylesheet" href="/stylesheets/schedule.css">
 
 
     <h1 id="titlesc">Welcome to your scheduling page, <%= user.username %></h1>
